--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 
         <h2>Added new text for branch</h2>
 
-
+        <h2>ready to b merged
+            
+        </h2>
 
     </div>
 </body>
