--- a/DoorDash/index.html
+++ b/DoorDash/index.html
@@ -41,89 +41,140 @@
 
     <div class="partner">
       <div>
-        <div  style="width: 15rem">
-            <img src="https://cdn.doordash.com/media/consumer/home/landing/new/ScootScoot.svg" class="card-img-top" alt="..." />     
-              <h3 class="card-title">Become A Dasher</h3>
-              <p class="card-text my-3">
-                As a Delivery driver,you'll make reliable money-working anytime anywhere
-              </p>
-              <a href="#" >Start earning <ion-icon name="arrow-forward-outline" style="font-size: 10px;"></ion-icon></a>
+        <div style="width: 15rem">
+          <img
+            src="https://cdn.doordash.com/media/consumer/home/landing/new/ScootScoot.svg"
+            class="card-img-top"
+            alt="..."
+          />
+          <h3 class="card-title">Become A Dasher</h3>
+          <p class="card-text my-3">
+            As a Delivery driver,you'll make reliable money-working anytime
+            anywhere
+          </p>
+          <a href="#"
+            >Start earning
+            <ion-icon
+              name="arrow-forward-outline"
+              style="font-size: 10px"
+            ></ion-icon
+          ></a>
         </div>
       </div>
 
       <div>
         <div style="width: 15rem">
-          <img src="https://cdn.doordash.com/media/consumer/home/landing/new/Storefront.svg" class="card-img-top" alt="..." />
+          <img
+            src="https://cdn.doordash.com/media/consumer/home/landing/new/Storefront.svg"
+            class="card-img-top"
+            alt="..."
+          />
           <div class="card-body my-3">
             <h3 class="card-title">Become a Partner</h3>
             <p class="card-text my-3">
               Grow Your Business and reach new costumers by partnering with us
             </p>
-            <a href="#" >Sign up your Store <ion-icon name="arrow-forward-outline" style="font-size: 10px;"></ion-icon> </a>
+            <a href="#"
+              >Sign up your Store
+              <ion-icon
+                name="arrow-forward-outline"
+                style="font-size: 10px"
+              ></ion-icon>
+            </a>
           </div>
         </div>
       </div>
 
       <div>
-        <div  style="width: 15rem">
-          <img src="https://cdn.doordash.com/media/consumer/home/landing/new/iphone.svg" class="card-img-top" alt="..." />
+        <div style="width: 15rem">
+          <img
+            src="https://cdn.doordash.com/media/consumer/home/landing/new/iphone.svg"
+            class="card-img-top"
+            alt="..."
+          />
           <div class="card-body my-3">
             <h3 class="card-title">Get The Best Doordash Experience</h3>
             <p class="card-text my-3">
               Experience The best your neighbourhood has to offer,all in one app
             </p>
-            <a href="#" >Get the app <ion-icon name="arrow-forward-outline" style="font-size: 10px;"></ion-icon></a>
+            <a href="#"
+              >Get the app
+              <ion-icon
+                name="arrow-forward-outline"
+                style="font-size: 10px"
+              ></ion-icon
+            ></a>
           </div>
         </div>
       </div>
     </div>
 
-
     <div class="secondRow">
-
       <div>
-        <h1>Everything you crave, <br> delivered.</h1>
+        <h1>
+          Everything you crave, <br />
+          delivered.
+        </h1>
         <h5>Your favorite local restaurants</h5>
-        <p>Get a slice of pizza or the whole pie delivered, or pick up house lo mein from the Chinese takeout spot you've been meaning to try.</p>
+        <p>
+          Get a slice of pizza or the whole pie delivered, or pick up house lo
+          mein from the Chinese takeout spot you've been meaning to try.
+        </p>
         <div>
           <button>Find Restaurants</button>
         </div>
-      </div>  
+      </div>
       <div>
-        <img src="https://img.cdn4dd.com/cdn-cgi/image/fit=cover,format=auto,quality=60/https://cdn.doordash.com/managed/consumer/seo/home/landing_cta/download_the_app_desktop.png" alt="">
+        <img
+          src="https://img.cdn4dd.com/cdn-cgi/image/fit=cover,format=auto,quality=60/https://cdn.doordash.com/managed/consumer/seo/home/landing_cta/download_the_app_desktop.png"
+          alt=""
+        />
       </div>
     </div>
 
-
-    <div class="thirdRow" >
-
-      <div >
-        <img src="https://img.cdn4dd.com/cdn-cgi/image/fit=cover,format=auto,quality=60/https://cdn.doordash.com/managed/consumer/seo/home/landing_cta/dashpass_desktop.png" alt="">
+    <div class="thirdRow">
+      <div>
+        <img
+          src="https://img.cdn4dd.com/cdn-cgi/image/fit=cover,format=auto,quality=60/https://cdn.doordash.com/managed/consumer/seo/home/landing_cta/dashpass_desktop.png"
+          alt=""
+        />
       </div>
 
       <div>
         <h1>DashPass is delivery for less</h1>
-        <p>Members get a $0 delivery fee on DashPass orders, 5% back on pickup orders, and so much more. Plus, it's free for 30 days.</p>
+        <p>
+          Members get a $0 delivery fee on DashPass orders, 5% back on pickup
+          orders, and so much more. Plus, it's free for 30 days.
+        </p>
         <div>
           <button>Get Dashpass</button>
         </div>
       </div>
-
     </div>
 
     <!-- <div class="banner">
 
     </div> -->
 
-    
+    <div class="fourthRow">
+      
+    </div>
 
-   
+    <div class="fourthRowcontent">
+      <h1>Get grocery and convenience store essentials</h1>
+      <h3 >Grocery delivery, exactly how you want it.</h3>
+      <p>Shop from home and fill your cart with fresh produce, frozen entrees, deli delights, and more.</p>
+      <button>Shop Groceries</button>
+    </div>
 
-
-
-
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
