--- a/DoorDash/index.html
+++ b/DoorDash/index.html
@@ -193,6 +193,42 @@
       </div>
     </div>
 
+    <div class="helping">
+        <h1>Helping you with to-dos <br> and gifting</h1>
+    </div>
+
+    <div class="sixthRow">
+
+      <div>
+        <img src="https://img.cdn4dd.com/cdn-cgi/image/fit=cover,format=auto,quality=60/https://cdn.doordash.com/managed/consumer/seo/home/landing_cta/package_pickup_desktop.png" alt="">
+        <h1>Return packages from home</h1>
+        <p>Request a package pickup with just a few taps and get your returns dropped off at carriers like UPS, FedEx, and USPS.</p>
+        <button>Try Package Pickup</button>
+      </div>
+
+      <div>
+        <img src="https://img.cdn4dd.com/cdn-cgi/image/fit=cover,format=auto,quality=60/https://cdn.doordash.com/managed/consumer/seo/home/landing_cta/flowers_desktop.png" alt="">
+        <h1>Flowers for any occasion</h1>
+        <p>Shop hand-picked and thoughtfully-arranged blooms from florists near you.</p>
+        <button>Send Flowers</button>
+      </div>
+
+      <div>
+        <img src="https://img.cdn4dd.com/cdn-cgi/image/fit=cover,format=auto,quality=60/https://cdn.doordash.com/managed/consumer/seo/home/landing_cta/alcohol_desktop.png" alt="">
+        <h1>Restock the minibar</h1>
+        <p>Hosting a get-together or need or need a special cocktail ingredient? Get liquor, beer, mixers, champagne, and wine delivered fast.*</p>
+        <button>Shop Alchohol</button>
+        <p class="my-3">*Must be 21+. Enjoy responsibly.</p>
+      </div>
+
+      <div>
+        <img src="https://img.cdn4dd.com/cdn-cgi/image/fit=cover,format=auto,quality=60/https://cdn.doordash.com/managed/consumer/seo/home/landing_cta/pet_supplies_desktop.png" alt="">
+        <h1>What your pets need, and want</h1>
+        <p>Finally, something cat people and dog people agree on — pet supplies delivery. Shop pet food, chew toys, and even costumes.</p>
+        <button>Get Pet Supplies</button>
+      </div>
+
+    </div>
 
     <script
       type="module"
