added eighth row

--- a/DoorDash/index.html
+++ b/DoorDash/index.html
@@ -227,7 +227,37 @@
         <p>Finally, something cat people and dog people agree on — pet supplies delivery. Shop pet food, chew toys, and even costumes.</p>
         <button>Get Pet Supplies</button>
       </div>
+    </div>
 
+    <div class="unlocking">
+      <h1>Unlocking opportunity for <br> Dashers and businesses</h1>
+    </div>
+
+    <div class="seventhRow">
+     <div>
+      <h2>Sign up to dash and get paid</h2>
+      <p style="color: black;">Deliver with the #1 Food and Drink App in the U.S., set your own schedule, and start earning cash anytime, anywhere.</p>
+      <div>
+      <button>Become a Dasher</button>
+      </div>
+     </div>
+     <div>
+      <img src="https://img.cdn4dd.com/cdn-cgi/image/fit=cover,format=auto,quality=60/https://cdn.doordash.com/managed/consumer/seo/home/landing_cta/become_a_dasher_desktop.png" alt="">
+     </div>
+    </div>
+
+    <div class="eighthRow">
+      <div>
+        <img src="https://img.cdn4dd.com/cdn-cgi/image/fit=cover,format=auto,quality=60/https://cdn.doordash.com/managed/consumer/seo/home/landing_cta/work_with_doordash_desktop.png" alt="">
+      </div>
+      <div >
+        <h2>Grow your business with DoorDash</h2>
+        <p style="color: black;">Businesses large and small partner with DoorDash to reach new customers, increase order volume, and drive more sales.</p>
+        <div>
+          <button>Become a Partner</button>
+        </div>
+      </div>
+      
     </div>
 
     <script
