--- a/DoorDash/index.html
+++ b/DoorDash/index.html
@@ -608,6 +608,34 @@
           </div>
         </div>
       </div>
+      <div class="fourthFoot">
+        <div class="fourthOne"> 
+          <a href="">Terms of service</a>
+          <a href="">Privacy</a>
+          <a href="">Delivery Locations</a>
+          <a href="">California Policy</a>
+          <a href="">Do not Sell or Share My Personal Information</a>
+          <a href="">&copy;2023DoorDash</a>
+        </div>
+        <div style="text-align: center;margin-bottom: 10px;">
+          <select name="language" id="" style="border-radius: 20px;">
+            <option value="">English(US)</option>
+            <option value="">Espanol(US)</option>
+            <option value="">English(CA)</option>
+            <option value="">Francais(CA)</option>
+            <option value="">English(AU)</option>
+            <option value="">English(NZ)</option>
+            
+          </select>
+        </div>
+        <div>
+          <ul>
+            <li><ion-icon name="logo-facebook"></ion-icon></li>
+            <li><ion-icon name="logo-twitter"></ion-icon></li>
+            <li><ion-icon name="logo-instagram"></ion-icon></li>
+          </ul>
+        </div>
+      </div>
     </div>
 
     <script
