--- a/DoorDash/index.html
+++ b/DoorDash/index.html
@@ -20,9 +20,14 @@
   <body>
     <div class="firstrow">
       <nav>
+        <div>
+
+        </div>
+
         <div class="logo">
           <h3>DOORDASH</h3>
         </div>
+        
         <div class="buttons">
           <button>Sign In</button>
           <button>Sign Up</button>
